--- a/styles/styles.css
+++ b/styles/styles.css
@@ -43,7 +43,7 @@ p {
     padding: 0;
 }
 footer {
-    margin-top: 15;
+    margin-top: 15px;
     border-top: 1px solid #000;
     text-align: center;
 }
