Just trying my best to fulfill the requirements for my assignment

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -4,7 +4,7 @@
     --accent1-color: #373E7C;
     --accent2-color: #1E203F;
     --heading-font: "Roboto", sans-serif;
-    --body-font: "static", sans-serif;
+    --text-font: "static", sans-serif;
 }
 header {
     background-color: var(--primary-color);
@@ -16,7 +16,7 @@ header {
     box-sizing: border-box;
 }
 body {
-    font-family: var(--body-font);
+    font-family: var(--text-font);
     color: var(--accent1-color);
 }
 header, main, footer {
